syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "pkg/pb";
option java_multiple_files = true;
option java_package = "com.template";
option java_outer_classname = "TemplateProtos";
option objc_class_prefix = "TP";

import "protoc-gen-swagger/options/annotations.proto";

option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
    info: {
        title: "TemplateServ";
        version: "1.0";
        contact: {
            name: "TemplateServ";
            url: "https://github.com/arpabet/templateserv";
            email: "john@mailnite.com";
        };
    };
    schemes: HTTP;
    schemes: HTTPS;
    consumes: "application/json";
    consumes: "application/octet-stream";
    produces: "application/json";
    produces: "application/octet-stream";
};

package stratum;

//
//  Template service
//

service TemplateService {

    //
    // Gets node info
    //
    rpc Node(NodeRequest) returns (NodeResponse) {
        option (google.api.http) = {
            get: "/v1/node"
        };
    }

}


message NodeRequest {
}


message NodeResponse {
    int64       nodeId = 1;
    int64       uptime = 2;         // running time in milliseconds since last restart
}
